<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_gravity="center_horizontal"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/profile_fragment" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:layout_marginTop="35dp"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/r80"
            android:layout_width="180dp"
            android:layout_height="150dp"
            android:src="@drawable/profile"
            android:foregroundGravity="center"
            android:layout_marginBottom="10dp"/>
    </LinearLayout>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/card_view"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="200dp"
        android:layout_marginBottom="4dp"
        card_view:cardBackgroundColor="#fff"
        card_view:cardCornerRadius="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/txtTitleName"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:text="@string/title_name"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    />
                <TextView
                    android:layout_width="10dp"
                    android:layout_height="wrap_content"
                    android:text=":"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Mochammad Fahmi Ulinnuha"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/txtTitleAddress"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:text="@string/address"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    />
                <TextView
                    android:layout_width="10dp"
                    android:layout_height="wrap_content"
                    android:text=":"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Loram Wetan Jati Kudus "
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/txtTitleHobby"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:text="@string/hobby"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    />
                <TextView
                    android:layout_width="10dp"
                    android:layout_height="wrap_content"
                    android:text=":"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hobiku"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/txtTitleQuote"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:text="@string/quotes"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    />
                <TextView
                    android:layout_width="10dp"
                    android:layout_height="wrap_content"
                    android:text=":"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/quotesku"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    />
            </LinearLayout>


        </LinearLayout>
    </androidx.cardview.widget.CardView>



</FrameLayout>